# ADEBot

./: .gitignore  README.md  api.py  extractor.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml  github-actions-ec2.yml
adebot/: api.py  app.py  extractor.py  models.py  utils.py
